--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,7 +25,7 @@
             "remotePath": "",
             "port": 2345,
             "host": "127.0.0.1",
-            "program": "C:/TestGo/src/github.com/gorilla/websocket/examples/echo/server",
+            "program": "H:/toophyhome/golang/project/src/github.com/gorilla/websocket/examples/echo/server",
             "env": {},
             "args": ["2323"],
             "showLog": true
