--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,7 @@
             "showLog": true
         },
         {
-            "name": "WebSocketServer",
+            "name": "HomeServer",
             "type": "go",
             "request": "launch",
             "mode": "debug",
@@ -39,6 +39,19 @@
             "port": 2345,
             "host": "127.0.0.1",
             "program": "C:/TestGo/src/github.com/gorilla/websocket/examples/echo/client",
+            "env": {},
+            "args": ["2323"],
+            "showLog": true
+        },
+        {
+            "name": "CompServer",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "remotePath": "",
+            "port": 2345,
+            "host": "127.0.0.1",
+            "program": "C:/TestGo/src/github.com/gorilla/websocket/examples/echo/server",
             "env": {},
             "args": ["2323"],
             "showLog": true
