--- a/.wing/launch.json
+++ b/.wing/launch.json
@@ -1,4 +1,60 @@
 {
+    // 使用 IntelliSense 了解相关属性。 
+    // 悬停以查看现有属性的描述。
+    // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+        {
+            "name": "WebSocketCommand",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "remotePath": "",
+            "port": 2345,
+            "host": "127.0.0.1",
+            "program": "C:/TestGo/src/github.com/gorilla/websocket/examples/command",
+            "env": {},
+            "args": ["2323"],
+            "showLog": true
+        },
+        {
+            "name": "HomeServer",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "remotePath": "",
+            "port": 2345,
+            "host": "127.0.0.1",
+            "program": "H:/toophyhome/golang/project/src/github.com/gorilla/websocket/examples/echo/server",
+            "env": {},
+            "args": ["2323"],
+            "showLog": true
+        },
+        {
+            "name": "WebSocketClient",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "remotePath": "",
+            "port": 2345,
+            "host": "127.0.0.1",
+            "program": "C:/TestGo/src/github.com/gorilla/websocket/examples/echo/client",
+            "env": {},
+            "args": ["2323"],
+            "showLog": true
+        },
+        {
+            "name": "CompServer",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "remotePath": "",
+            "port": 2345,
+            "host": "127.0.0.1",
+            "program": "C:/TestGo/src/github.com/gorilla/websocket/examples/echo/server",
+            "env": {},
+            "args": ["2323"],
+            "showLog": true
+        }
+    ]
 }
